--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -1,127 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A685218B-7EA6-4972-A069-F9B40376D56E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Redzen</RootNamespace>
-    <AssemblyName>Redzen</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>4.0.0.0</Version>
+    <Copyright>Copyright Colin D. Green 2016-2018</Copyright>
+    <Description>General purpose C# code library.</Description>
+    <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
+    <PackageTags>C# .NET rng ziggurat gaussian io sorting</PackageTags>
+    <PackageReleaseNotes />
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>bin\Release\Redzen.xml</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug %28Unsafe%29|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug %28Unsafe%29\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;UNSAFE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release %28Unsafe%29|AnyCPU'">
-    <OutputPath>bin\Release %28Unsafe%29\</OutputPath>
-    <DefineConstants>TRACE;UNSAFE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="MathNet.Numerics" Version="4.0.0-beta05" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="ArrayUtils.cs" />
-    <Compile Include="Collections\IntStack.cs" />
-    <Compile Include="Linq\EnumerableUtils.cs" />
-    <Compile Include="Numerics\HistogramData.cs" />
-    <Compile Include="Random\IRandomSource.cs" />
-    <Compile Include="Numerics\NumericsUtils.cs" />
-    <Compile Include="Numerics\DiscreteDistributionUtils.cs" />
-    <Compile Include="Numerics\DiscreteDistribution.cs" />
-    <Compile Include="Random\ContinuousDistributionFactory.cs" />
-    <Compile Include="Random\Double\UniformDistribution.cs" />
-    <Compile Include="Random\Float\ZigguratGaussianDistribution.cs" />
-    <Compile Include="Random\Float\UniformDistribution.cs" />
-    <Compile Include="Random\IContinuousDistribution.cs" />
-    <Compile Include="Random\IGaussianDistribution.cs" />
-    <Compile Include="Random\IUniformDistribution.cs" />
-    <Compile Include="Random\RandomSourceFactory.cs" />
-    <Compile Include="SearchUtils.cs" />
-    <Compile Include="Sorting\IntroSort.cs" />
-    <Compile Include="Sorting\ParallelSort.cs" />
-    <Compile Include="Sorting\SortUtils.cs" />
-    <Compile Include="Structures\CircularBuffer.cs" />
-    <Compile Include="Structures\Compact\CompactIntegerList.cs" />
-    <Compile Include="Structures\Compact\FixedPointDecimal.cs" />
-    <Compile Include="Random\XorShiftRandom.cs" />
-    <Compile Include="IO\FileByteArray.cs" />
-    <Compile Include="IO\MemoryBlockStream.cs" />
-    <Compile Include="IO\NonClosingStreamWrapper.cs" />
-    <Compile Include="IO\StreamHelper.cs" />
-    <Compile Include="Random\Double\BoxMullerGaussianDistribution.cs" />
-    <Compile Include="Random\Double\ZigguratGaussianDistribution.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\DoubleCircularBufferWithStats.cs" />
-    <Compile Include="Structures\KeyedCircularBuffer.cs" />
+    <Folder Include="Properties\" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="LICENSE.txt" />
-    <None Include="nuget-instructions.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="RedZen.nuspec" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
