--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -2,18 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>8.1.0.0</Version>
-    <Copyright>Copyright Colin D. Green 2016-2018</Copyright>
+    <Version>9.0.0.0</Version>
+    <Copyright>Copyright Colin D. Green 2015-2019</Copyright>
     <Description>General purpose C# code library.</Description>
     <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro</PackageTags>
-    <PackageReleaseNotes>Refactor of distribution classes. Thread sync fix on DefaultRandomSeedSource. Minor performance improvements.</PackageReleaseNotes>
+    <PackageReleaseNotes>Rename IRandomSourceBuilder to IRandomSourceFactory.
+Array bound fixes: UniformDistribution, ZigguratGaussian, ZigguratGaussianSampler, ZigguratGaussianStatelessSampler.
+Added MathArrayUtils.</PackageReleaseNotes>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
     <Authors>Colin D. Green</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <LangVersion>7.3</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
