--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -5,8 +5,8 @@
     <Version>9.1.0.0</Version>
     <Copyright>Copyright Colin D. Green 2015-2019</Copyright>
     <Description>General purpose C# code library.</Description>
-    <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro</PackageTags>
     <PackageReleaseNotes>Rename IRandomSourceBuilder to IRandomSourceFactory.
 Array bound fixes: UniformDistribution, ZigguratGaussian, ZigguratGaussianSampler, ZigguratGaussianStatelessSampler.
@@ -15,7 +15,7 @@ Added MathArrayUtils.</PackageReleaseNotes>
     <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
     <Authors>Colin D. Green</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks> 
   </PropertyGroup>
 
   <ItemGroup>
