--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>12.0.0.0-preview5</Version>
+    <Version>12.0.0.0-preview6-c</Version>
     <Copyright>Copyright Colin D. Green 2015-2020</Copyright>
     <Description>General purpose C# code library.</Description>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
